[package]
name = "my-redis"
version = "0.1.0"
authors = ["David Salami <wizdave97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
dashmap = "4.0.2"
